# Gungnir

./: .gitignore  CMakeLists.txt  README.md
src/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  eval.cpp  eval.h  main.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  notation.cpp  notation.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
tools/: README.md  ab_all_checkpoints.sh  diagnose_nnue.py  extract_lichess_evals.py  gungnir_nnue.py  label_fens.py  npz_to_npy.py  precompute_features.py  save_nnue.py  train_halfka.py  train_nnue.py
